# python-tasks

./: .gitignore  .pylintrc  README.md  requirements.txt
app/: crud.py  database.py
fastapi-regular/: Dockerfile  docker-compose.yml  pyproject.toml
fastapi-regular/app/: crud.py  database.py  main.py  models.py  schemas.py
