[tool.poetry]
name = "fastapi-regular"
version = "0.1.0"
description = ""
authors = ["Jon Snow <jon.snow@winter.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"
uvicorn = "^0.13.3"
pydantic = "^1.7.3"
httpx = "^0.16.1"
SQLAlchemy = "^1.3.22"
databases = "^0.4.1"
psycopg2 = "^2.8.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
pylint = "^2.6.0"
aiosqlite = "^0.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
